Rename Search Filter

--- a/application/modules/default/views/scripts/product/partials/searchFilter.phtml
+++ b/application/modules/default/views/scripts/product/partials/searchFilter.phtml
@@ -59,7 +59,7 @@
     </style>
 <div class="panel-group">
     <div class="panel panel-default refine-search-header">
-        <h4 style="font-weight: 600;padding:10px 15px;">Refine your search:</h4>
+        <h4 style="font-weight: 600;padding:10px 15px;">Choose Filter:</h4>
         <div class="current-search">
         <?php if ($currentCat) : ?>
         <a href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, 'pci' => null))?>" class="btn btn-default btn-xs" role="button">
