--- a/application/modules/default/views/scripts/partials/paginationControlBootstrap.phtml
+++ b/application/modules/default/views/scripts/partials/paginationControlBootstrap.phtml
@@ -61,7 +61,8 @@ $serverUrl = $this->serverUrl();
                     if (status == "error") {
                         $(target).empty().html('Service is temporarily unavailable. Our engineers are working quickly to resolve this issue. <br/>Find out why you may have encountered this error.');
                     }
-                });                
+                     ProductDetailCommentTooltip.setup();      
+                });          
                 return false;
            });         
     });
