--- a/application/modules/default/views/scripts/user/partials/loopLike.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopLike.phtml
@@ -28,7 +28,7 @@
 	
 	
 	<div class="col-lg-3" >		
-		<i class="fa fa-heart" aria-hidden="true" style="color:#8e44ad;"></i>        		
+		<i class="fa fa-heart myfav" aria-hidden="true" ></i>        		
 		<?=$this->printDate($this->file->created_at)?> 
 	</div>
 </div>
