--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -198,6 +198,10 @@
     text-align: center;
   }
 
+  i.myfav{
+    color:#8e44ad;
+  }
+
   h1.page-title {
       color: #34495e;
       font-weight: bold;
@@ -1806,13 +1810,12 @@ ul.meta-nav-top
                 article.lastchangelog{
                     padding-top: 50px;
                 }
-              }
-            
+              }            
+              
               #product-discussion {
-                container {
-                    padding: 0;
-                    margin: 0;
-                }
+                 
+                  
+                 
               }
 
             }
@@ -1871,6 +1874,51 @@ ul.meta-nav-top
           span.product-update-date{
             padding-left: 10px;
           }
+        }
+
+        #likes-panel{
+            .u-wrap{
+              float: left;              
+              padding: 0.3em;
+              border: 0.35em solid #dee0e0;
+              border-radius: 5px;
+              height: 14em;
+              margin-bottom: 1em;
+              background: white;
+              width: 115px;
+              height: 200px;
+              margin-right: 10px;
+              -webkit-transition: all 0.2s ease-out;
+              -moz-transition: all 0.2s ease-out;
+              -ms-transition: all 0.2s ease-out;
+              -o-transition: all 0.2s ease-out;
+              figure img{
+                width: 100%;
+                border: 1px solid #dbdbdb;
+                -webkit-border-radius: 999px;
+                -moz-border-radius: 999px;
+                border-radius: 999px;
+                -webkit-background-clip: padding-box;
+                -moz-background-clip: padding;
+                background-clip: padding-box;
+              }
+              h3{
+                font-size: 13px;
+                font-weight: bold;
+                word-wrap: break-word;
+                line-height: 20px;
+                height: 20px;
+                padding: 0;
+                margin: 0;
+               }
+              span.small {
+                font-size: 13px;
+                text-align: right;
+                color: #444;
+                margin-top: 50px;
+                float: right;
+              }
+            }
         }
     }
 
