--- a/httpdocs/theme/flatui/css/tooltipster-light-customized.css
+++ b/httpdocs/theme/flatui/css/tooltipster-light-customized.css
@@ -18,6 +18,7 @@
 
 .tooltipster-sidetip.tooltipster-light.tooltipster-light-customized .tooltipster-content  .statistic{
                         display: block;                        
-                        padding-left: 20px;
+                        padding-left: 15px;
+                        padding-right: 15px;
                         padding-top: 10px;
 }
