--- a/application/modules/default/views/scripts/product/partials/productCommentsUX1.phtml
+++ b/application/modules/default/views/scripts/product/partials/productCommentsUX1.phtml
@@ -53,14 +53,14 @@ $pageCount = $this->comments->getTotalItemCount()/$this->comments->getItemCountP
                 </h3>
                 <?php if (Zend_Auth::getInstance()->hasIdentity()) { ?>
                     <p style="position: absolute; top:25px;">
-                        <small class="small"><a data-toggle="collapse" href="#add-comment"><span class="glyphicon glyphicon-share-alt"></span> Add a comment</a></small>
+                        <small class="small"> Add a comment</small>
                     </p>
-                    <div class="collapse" id="add-comment" style="padding-top: 8px;">
-                        <form class="full-width product-add-comment" action="/productcomment/addreply/">
+                    <div class="collapse in" id="add-comment" style="padding-top: 8px;">
+                        <form class="full-width product-add-comment" action="/productcomment/addreply/" id="product-add-comment1">
                             <input type="hidden" name="p" value="<?= $this->product->project_id ?>">
                             <input type="hidden" name="m" value="<?= $identity->member_id ?>">
                             <textarea name="msg" class="full-width" required="required"></textarea>
-                            <button type="submit" style="border:none;background: transparent;color: #2673b0;" class="small"><span class="glyphicon glyphicon-send"></span> Send</button>
+                            <button type="submit" style="border:none;background: transparent;color: #2673b0; float: right" class="small"><span class="glyphicon glyphicon-send"></span> Send</button>
                         </form>
                     </div>
                 <?php } else { ?>
@@ -148,7 +148,7 @@ $pageCount = $this->comments->getTotalItemCount()/$this->comments->getItemCountP
                                         <div id="report-<?= $comment['comment_id'] ?>-message">
                                         <p>Do you really want to report this comment?</p>
                                         <div class="modal-footer">
-                                            <button type="submit" style="border:none;background: transparent;color: #2673b0;" class="small"><span class="glyphicon glyphicon-share-alt"></span> Yes</button>
+                                            <button type="submit" style="border:none;background: transparent;color: #2673b0; " class="small"><span class="glyphicon glyphicon-share-alt"></span> Yes</button>
                                         </div>
                                         </div>
                                     </form>
@@ -157,12 +157,12 @@ $pageCount = $this->comments->getTotalItemCount()/$this->comments->getItemCountP
                         </div>
                         <?php if (Zend_Auth::getInstance()->hasIdentity()) { ?>
                         <div class="collapse" id="reply-<?= $comment['comment_id'] ?>">
-                            <form class="full-width product-add-comment" action="/productcomment/addreply/">
+                            <form class="full-width product-add-comment" action="/productcomment/addreply/" id="product-add-comment2">
                                 <input type="hidden" name="i" value="<?= $comment['comment_id'] ?>">
                                 <input type="hidden" name="p" value="<?= $comment['comment_target_id'] ?>">
                                 <input type="hidden" name="m" value="<?= $identity->member_id ?>">
                                 <textarea name="msg" class="full-width" required="required"></textarea>
-                                <button type="submit" style="border:none;background: transparent;color: #2673b0;" class="small"><span class="glyphicon glyphicon-send"></span> Send</button>
+                                <button type="submit" style="border:none;background: transparent;color: #2673b0; float: right" class="small"><span class="glyphicon glyphicon-send"></span> Send</button>
                                 <?php //echo $captcha->render($this); ?>
                             </form>
                         </div>
@@ -189,8 +189,9 @@ $pageCount = $this->comments->getTotalItemCount()/$this->comments->getItemCountP
     </span>
 </div>
 <?php $this->inlineScript()->appendScript(
-    '    $(document).ready(function(){
-            AjaxForm.setup("form.product-add-comment", "div#product-discussion");
+    '    $(document).ready(function(){            
+            AjaxForm.setup("form#product-add-comment1", "div#product-discussion");
+            AjaxForm.setup("form#product-add-comment2", "div#product-discussion");
             ProductDetailCommentTooltip.setup();
         });
     ');
