--- a/application/modules/default/views/scripts/product/partials/details.phtml
+++ b/application/modules/default/views/scripts/product/partials/details.phtml
@@ -213,11 +213,11 @@ $userRoleName = $helperUserRole->userRole();
                     url: target,
                     success: function (results) {
                         if (status == 0) {
-                            alert('Project is ghns-included successfully');
+                            alert('Project is successfully included into GHNS');
                             $('#ghns_excluded-this-checkbox').prop("checked", false);
 
                         } else {
-                            alert('Project is ghns-excluded successfully');
+                            alert('Project is successfully excluded from GHNS');
                             $('#ghns_excluded-this-checkbox').prop("checked", true);
 
                         }
@@ -309,11 +309,11 @@ $userRoleName = $helperUserRole->userRole();
                     url: target,
                     success: function (results) {
                         if (status == 0) {
-                            alert('Project is ghns-included successfully');
+                            alert('Project is successfully included into GHNS');
                             $('#ghns_excluded-this-checkbox').prop("checked", false);
 
                         } else {
-                            alert('Project is ghns-excluded successfully');
+                            alert('Project is successfully excluded from GHNS');
                             $('#ghns_excluded-this-checkbox').prop("checked", true);
 
                         }
