--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -52,13 +52,13 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
                         <div class="row">   
                         <?php                                 
                                     echo $this->partial('/home/partials/product_group.phtml', array(
-                                            "title"  => "GTK-Theming",
+                                            "title"  => "GTK/Gnome",
                                             "products" => $this->productsThemesGTK
                                         )
                                     );       
 
                                     echo $this->partial('/home/partials/product_group.phtml', array(
-                                            "title"  => "Plasma-Theming",
+                                            "title"  => "KDE Plasma",
                                             "products" => $this->productsThemesPlasma
                                         )
                                     );                                 
@@ -68,13 +68,13 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
                         <div class="row blockpadding">   
                         <?php                                 
                                     echo $this->partial('/home/partials/product_group.phtml', array(
-                                            "title"  => "Box-Theming",
+                                            "title"  => "Window Managers",
                                             "products" => $this->productsThemesBox
                                         )
                                     );       
 
                                     echo $this->partial('/home/partials/product_group.phtml', array(
-                                            "title"  => "Icons,Cursors",
+                                            "title"  => "Icons, Cursors",
                                             "products" => $this->productsIconsCursors
                                         )
                                     );                                 
@@ -84,28 +84,29 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
                         <div class="row blockpadding">
                         <?php                                 
                                     echo $this->partial('/home/partials/product_group.phtml', array(
+                                            "title"  => "Concepts, Screenshots",
+                                            "products" => $this->productsScreenshots
+                                        )
+                                    );                                 
+                                    
+                                    echo $this->partial('/home/partials/product_group.phtml', array(
                                             "title"  => "Wallpapers",
                                             "products" => $this->productsWallpapers
                                         )
                                     );       
 
-                                    echo $this->partial('/home/partials/product_group.phtml', array(
-                                            "title"  => "Concepts, Screenshots",
-                                            "products" => $this->productsScreenshots
-                                        )
-                                    );                                 
                         ?>                                                                                                          
                         </div>
                         <div class="row blockpadding" >
                          <?php                                 
                                      echo $this->partial('/home/partials/product_group.phtml', array(
-                                             "title"  => "Add-Ons",
+                                             "title"  => "App Add-Ons",
                                              "products" => $this->productsAddons
                                          )
                                      );       
 
                                      echo $this->partial('/home/partials/product_group.phtml', array(
-                                             "title"  => "Apps",
+                                             "title"  => "Applications",
                                              "products" => $this->productsApps
                                          )
                                      );                                 
