--- a/application/modules/default/views/scripts/settings/index.phtml
+++ b/application/modules/default/views/scripts/settings/index.phtml
@@ -202,7 +202,7 @@ $this->tab = 'settings';
 <script>
     $(document).ready(function(){
         if(document.location.hash) {            
-            let hash = $(document.location.hash);
+            var hash = $(document.location.hash);
             $('a[href="'+document.location.hash+'"]').trigger( "click" );           
         }
     });
