--- a/application/modules/default/views/scripts/settings/partials/picture.phtml
+++ b/application/modules/default/views/scripts/settings/partials/picture.phtml
@@ -57,8 +57,9 @@
                 <div class="box pull-left margin-left-15"  style="padding-left: 15px;">
                     <?php echo $this->formResult($this->pictureform, $this->save, true, 'Changes saved. Some picture elements will be updated at next login.'); ?>
                 </div>
-                <button type="submit" class="btn btn-native pull-right"
-                        tabindex="14"><?= $this->translate('Save &amp; Update') ?></button>
+                <button type="submit" class="btn btn-native pull-right" tabindex="14">
+                    <?= $this->translate('Save &amp; Update') ?>
+                </button>
             </div>
         </form>
         <!-- /.standard-form -->
